# pixelforge

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  cibuildwheel.toml  make_sample.py  pyproject.toml
cmake/: CompilerWarnings.cmake  Version.cmake
docker/: linux-arm64.Dockerfile  linux-x64-clang.Dockerfile  linux-x64-gcc.Dockerfile
docs/: LIFECYCLE.md  README.md  architecture.md  glossary.md
docs/demo/: 01-cli-usage.md  02-python-usage.md  03-portable-usage.md  README.md
docs/future/: improvements.md
docs/guides/: 01-building-from-source.md  02-build-artifacts.md  03-running-pixelforge.md  04-installing.md  05-generating-packages.md  06-docker-builds.md  07-troubleshooting.md  README.md
docs/phases/: phase-00-environment.md  phase-01-core-static-lib.md  phase-02-runtime-dll.md  phase-03-plugins.md  phase-04-cli.md  phase-05-python-bindings.md  phase-06-wheel-packaging.md  phase-07-native-installers.md  phase-08-multi-arch.md  phase-09-ci-cd.md
include/pixelforge/: colorspace.h  export.h  image.h  io.h  kernel.h  pipeline.h  plugin.h  plugin_api.h  version.h.in
plugins/: CMakeLists.txt
plugins/blur/: CMakeLists.txt  blur.cpp
plugins/common/: kernel_common.h  plugin_helpers.h
plugins/edge/: CMakeLists.txt  edge.cpp
plugins/grayscale/: CMakeLists.txt  grayscale.cpp
plugins/invert/: CMakeLists.txt  invert.cpp
plugins/sharpen/: CMakeLists.txt  sharpen.cpp
python/: CMakeLists.txt
python/nanobind_module/: CMakeLists.txt  bindings.cpp
python/pixelforge/: __init__.py
python/pybind11_module/: CMakeLists.txt  bindings.cpp
python/tests/: test_filters.py
scripts/: check_env.ps1  check_env.sh  run_matrix.ps1
src/cli/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  colorspace.cpp  image.cpp  kernel.cpp
src/runtime/: CMakeLists.txt  io_stb.cpp  pipeline.cpp  plugin_loader.cpp
tests/: CMakeLists.txt  cli_smoke.cmake  test_colorspace.cpp  test_image.cpp  test_io.cpp  test_kernel.cpp  test_pipeline.cpp  test_plugin_loader.cpp  test_version.cpp
